src/test/deca/context/invalid/created/testPass1/doubleClassdef.deca
// Description :
//    Test invalide : Opération d'addition sur des booléens
//
// Résultats :
//    Erreur contextuelle
//    Ligne 9: DoubleClassDeclarationException: Class names must be unique. You have declared the class A more than once.

class A{}
class A{}